--- a/lecture15_SSR_Todo/public/index.html
+++ b/lecture15_SSR_Todo/public/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div id="container">
-    <form >
+    <form id="task-form">
       <input type="text" placeholder="Task..." name="task">
       <button>Add</button>
     </form>
@@ -19,6 +19,10 @@
       <button>Active</button>
       <button>Completed</button>
     </div>
+  </div>
+
+  <div id="todos">
+
   </div>
 
   <script src="script.js"></script>
