--- a/lecture16_SSR_Todo/public/index.html
+++ b/lecture16_SSR_Todo/public/index.html
@@ -22,8 +22,11 @@
     </div>
     <div id="todos">
     </div>
-  </div>
 
+  <div id="clear">
+    <button>Clear Completed</button>
+  </div>
+  </div>
 
   <script src="script.js"></script>
 </body>
